--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Documentation root URL (crawler starts here and follows internal/subdomain links)
 ROOT_URL=https://www.allrecipes.com/recipe/46822/indian-chicken-curry-ii/
 OLLAMA_MODEL=llama3.2-vision
-
+OLLAMA_HOST=http://10.206.68.18:11434
 # Crawl limits
 MAX_PAGES=10
 MAX_DEPTH=3
