--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Documentation root URL (crawler starts here and follows internal/subdomain links)
-ROOT_URL=http://10.206.68.18:8002/
+ROOT_URL=http://localhost:8001/pdf/fftester.pdf
 OLLAMA_MODEL=gemma3
-OLLAMA_HOST=http://10.206.68.18:11434
+OLLAMA_HOST=http://localhost:11434
 # Crawl limits
 MAX_PAGES=10
 MAX_DEPTH=3
