split knowledge base handle file input fix issue of answering question

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Documentation root URL (crawler starts here and follows internal/subdomain links)
 ROOT_URL=http://localhost:8001/pdf/fftester.pdf
-OLLAMA_MODEL=gemma3
+OLLAMA_MODEL=llama3.2-vision
 OLLAMA_HOST=http://localhost:11434
 # Crawl limits
 MAX_PAGES=10
